Deployments/two-pod-same-node/arijit-two-pod-same-node-nginx-single-pod-deployment.yaml

apiVersion: v1
kind: Pod
metadata:
  name: arijit-two-pod-same-node-single-pod-1
  labels:
    app: arijit-two-pod-same-node-single-pod-1
spec:
  containers:
  - name: arijit-two-pod-same-node-single-container
    image: arijit-two-pod-same-node
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 5000 
    resources:
      limits:
        memory: 50Mi
      requests:
        cpu: 20m
---
apiVersion: v1
kind: Pod
metadata:
  name: arijit-two-pod-same-node-single-pod-2
  labels:
    app: arijit-two-pod-same-node-single-pod-2
spec:
  containers:
  - name: arijit-two-pod-same-node-single-container
    image: arijit-two-pod-same-node
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 5000
    resources:
      limits:
        memory: 50Mi
      requests:
        cpu: 20m
---
apiVersion: v1
kind: Pod
metadata:
  name: arijit-two-pod-same-node-nginx-loadbalancer 
  labels:
    app: arijit-two-pod-same-node-nginx-loadbalancer 
spec:
  containers:
  - name: nginx-loadbalancer-container
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: arijit-two-pod-same-node-nginx-service
spec:
  selector:
    app: arijit-two-pod-same-node-nginx-loadbalancer 
  ports:
  - protocol: TCP
    port: 80  
    targetPort: 80  
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /two-pod-same-node/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: arijit-two-pod-same-node-nginx-service
            port:
              number: 80
