Deployments/two-pod-same-node/two_pod_with_nginxlb.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flask-app-single-pod-1
  labels:
    app: flask-app-single-pod-1
spec:
  containers:
  - name: flask-app-single-container
    image: arijitsaha2002/flask_app:0.2
    ports:
    - containerPort: 5000 
---
apiVersion: v1
kind: Pod
metadata:
  name: flask-app-single-pod-2
  labels:
    app: flask-app-single-pod-2 
spec:
  containers:
  - name: flask-app-single-container
    image: arijitsaha2002/flask_app:0.2
    ports:
    - containerPort: 5000 
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-loadbalancer 
  labels:
    app: nginx-loadbalancer 
spec:
  containers:
  - name: nginx-loadbalancer-container
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer-service
spec:
  selector:
    app: nginx-loadbalancer 
  ports:
  - protocol: TCP
    port: 80  
    targetPort: 80  
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hpa-flask-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: localhost 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-loadbalancer-service 
            port:
              number: 8080
